# goldset

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  defaults_and_templates.md  goldset-prd-paste.html  prd.md  provider_adapters.md  rubric_design.md
evalkit/: __init__.py  cli.py  errors.py  evaluators.py  golden.py  loaders.py  logic.py  mapping.py  metrics.py  models.py  reports.py  review_ui.py  rubrics.py  self_improvement.py  storage.py  workbench_ui.py  workspace.py
evalkit/providers/: __init__.py  base.py  factory.py  heuristic.py  ollama_provider.py  openai_provider.py
examples/exports/: generic_email_export.csv  generic_email_results.csv
examples/golden_sets/: lifecycle_email_golden_set.csv
examples/landing_page/: rubric.yaml
examples/lifecycle_activation_campaign/: rubric.yaml  sample.csv
examples/lifecycle_email/: rubric.yaml  sample.csv
examples/lifecycle_winback_campaign/: rubric.yaml  sample.csv
examples/outcomes/: lifecycle_email_outcomes.csv
examples/paid_social_ad/: rubric.yaml
examples/sample_data/: marketing_outputs.csv
examples/seo_content_brief/: rubric.yaml
templates/mappings/: generic_email.yaml  generic_outcomes.yaml
templates/rubrics/: basic_marketing_quality.yaml  landing_page.yaml  lifecycle_email.yaml  paid_social_ad.yaml
