[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goldset-evals"
version = "0.1.0"
description = "Open source evals and review workflows for AI go-to-market teams."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.0"
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

[project.scripts]
evalkit = "evalkit.cli:main"

[tool.setuptools.packages.find]
include = ["evalkit*"]
